--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -21,9 +21,9 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'DM Sans';
+    --aw-font-serif: 'DM Sans';
+    --aw-font-heading: 'DM Sans';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
@@ -42,9 +42,9 @@ import '@fontsource-variable/inter';
   }
 
   .dark {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'DM Sans';
+    --aw-font-serif: 'DM Sans';
+    --aw-font-heading: 'DM Sans';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
