--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -46,7 +46,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="isQtRQuRU48" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <YouTube id="isQtRQuRU48" title="What is The RED Method?" />
       <style is:inline>
         lite-youtube {
           margin: 0 auto;
