--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/Header.astro';
-import Footer from '~/components/widgets/Footer.astro';
-import Announcement from '~/components/widgets/Announcement.astro';
+// import Footer from '~/components/widgets/Footer.astro';
+// import Announcement from '~/components/widgets/Announcement.astro';
 
 import { headerData, footerData } from '~/navigation';
 
@@ -25,7 +25,7 @@ const { metadata } = Astro.props;
   <main>
     <slot />
   </main>
-  <slot name="footer">
+  <!-- <slot name="footer">
     <Footer {...footerData} />
-  </slot>
+  </slot> -->
 </Layout>
