--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,16 +40,14 @@ const metadata = {
     <Fragment slot="title">
       <span class="hidden xl:inline">Confidently</span> Enroll
       <span class="text-accent dark:text-white highlight"> New Clients</span>
-      <span class="hidden xl:inline"> Every Week Without Sales Calls, Trend-Chasing, or Guesswork</span>
+      <span class="hidden xl:inline"> Every Week Without Exausting Yourself</span>
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">The RED Method</span> is a simple system that eliminates feast-or-famine cycles, so you
-        can grow your business</span
-      >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">Every Week Like Clockwork</span>
-      without posting randomly online or relying on referrals
+        <span class="font-semibold">The RED Method</span> is a simple system for coaches to consistently enroll high-ticket clients</span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">every week like clockwork</span>
+      without burnout
     </Fragment>
   </Hero>
 
