--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,22 +60,22 @@ const metadata = {
   <Features
     id="features"
     tagline="The Problem"
-    title="Are You Stuck in the Feast-or-Famine Cycle?"
+    title="Struggling To Grow?"
     items={[
       {
-        title: 'Inconsistent leads, relying on referrals or luck to get clients',
+        title: 'No clear steps to help clients',
         icon: 'tabler:x',
       },
       {
-        title: 'Wasting time on social media, hoping for organic growth, with little to show for it.',
+        title: 'Prospects lose interest',
         icon: 'tabler:x',
       },
       {
-        title: 'You feel stuck between sales calls, marketing experiments, and chasing new trends',
+        title: 'Not enough new customers',
         icon: 'tabler:x',
       },
       {
-        title: 'You don’t have a clear, repeatable system for growth—you’re always reacting instead of scaling',
+        title: 'Too much manual work',
         icon: 'tabler:x',
       },
     ]}
@@ -89,23 +89,23 @@ const metadata = {
     items={[
       {
         title: 'Predictable Growth',
-        description: 'No more guessing where your next client is coming from',
+        description: 'Always know where your next customer is coming from. No more guessing!',
       },
       {
-        title: 'Simple Systems',
-        description: 'A clear, structured process that works without unnecessary complexity',
+        title: 'Simple Process',
+        description: 'A clear and easy process that works without being too complicated.',
       },
       {
         title: 'No Hard Selling',
-        description: 'No aggressive sales calls or tactics—just an efficient lead flow',
+        description: 'No pushy sales calls—just a smooth way to get new customers.',
       },
       {
-        title: 'Works for Any Service-Based Business',
-        description: 'Whether you’re a consultant, coach, or agency, the RED Method provides a scalable foundation',
+        title: 'Works for Any Business',
+        description: 'Perfect for coaches, consultants, and service businesses that want to grow',
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1616198814651-e71f960c3180?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
+      src: 'https://images.unsplash.com/photo-1505373877841-8d25f7d46678?q=80&w=2012&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D',
       alt: 'Steps image',
     }}
   >
