--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,9 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">The RED Method</span> is a simple system for coaches to consistently enroll high-ticket clients</span>
+        <span class="font-semibold">The RED Method</span> is a simple system for coaches to consistently enroll high-ticket
+        clients</span
+      >
       <span class="block mb-1 sm:hidden font-bold text-blue-600">every week like clockwork</span>
       without burnout
     </Fragment>
@@ -144,8 +146,8 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1616198814651-e71f960c3180?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
-      alt: 'Steps image',
+      src: '~/assets/images/map.png',
+      alt: 'The RED Method Map',
     }}
   />
 
@@ -232,9 +234,13 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <!-- Calendly link widget begin -->
-      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet" />
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/clients-jjg/client-engine-workshop?hide_gdpr_banner=1'});return false;">Schedule My 9-Step Scaling Session</a>
+      <a
+        href=""
+        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/clients-jjg/client-engine-workshop?hide_gdpr_banner=1'});return false;"
+        >Schedule My 9-Step Scaling Session</a
+      >
       <!-- Calendly link widget end -->
     </Fragment>
   </CallToAction>
