chore: without relying on referrals

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const metadata = {
         clients</span
       >
       <span class="block mb-1 sm:hidden font-bold text-blue-600">every week like clockwork</span>
-      without burnout
+      without relying on referrals
     </Fragment>
   </Hero>
 
