--- a/src/components/widgets/Steps.astro
+++ b/src/components/widgets/Steps.astro
@@ -42,7 +42,7 @@ const {
             <Fragment set:html={image} />
           ) : (
             <Image
-              class="inset-0 object-cover object-center h-full rounded-md shadow-lg md:absolute md:w-full bg-page"
+              class="inset-0 object-cover object-center h-full rounded-md md:absolute md:w-full bg-page"
               widths={[400, 768]}
               sizes="(max-width: 768px) 100vw, 432px"
               width={768}
