fix: move anchor above section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,7 +121,7 @@ const metadata = {
   </Content>
 
   <!-- Steps Widget ****************** -->
-
+  <a id="session"></a>
   <Steps
     title="How The RED Method Gives You a Scalable Client System"
     items={[
@@ -233,7 +233,6 @@ const metadata = {
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet" />
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
       <a
-        id="session"
         href=""
         class=""
         onclick="Calendly.initPopupWidget({url: 'https://calendly.com/clients-jjg/client-engine-workshop?hide_gdpr_banner=1'});return false;"
