chore: content revision, typo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -227,7 +227,7 @@ const metadata = {
   > -->
   <Steps2
     title="A Free Workshop? What's the catch?"
-    subtitle="These workshops are free because a percentage of people decide they want help putting the steps into action and they us. If that’s you, great. If not, no pressure at all."
+    subtitle="These workshops are free because a percentage of people decide they want help putting the steps into action and they hire us. If that’s you, great. If not, no pressure at all."
     items={[
       {
         title: 'Review',
@@ -242,7 +242,7 @@ const metadata = {
       {
         title: 'Guarantee',
         description:
-          'I guarantee you’ll leave with valuable, actionable strategies to attract more of the right clients. No fluff, no pitch-fest, just real insight into what moves the needle.',
+          'I guarantee you’ll leave with valuable, actionable strategies to attract more of the right clients. No fluff, no pitch-fest, just real insight and an invitation to help move the needle.',
       },
     ]}
   />
