chore: revise hero section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Content from '~/components/widgets/Content.astro';
 import Steps2 from '~/components/widgets/Steps2.astro';
 
 const metadata = {
-  title: 'Get New Clients Every Week - The RED Method',
+  title: 'Get A Simple Plan to Help You Find New Clients Every Week—Without Feeling Tired or Stuck',
   ignoreTitleTemplate: true,
 };
 ---
@@ -31,21 +31,18 @@ const metadata = {
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{
-      src: '~/assets/images/map.png',
-      alt: 'The RED Method Map',
-    }}
   >
+    <!-- A Simple Plan to Help You Find New Clients Every Week—Without Feeling Tired or Stuck -->
     <Fragment slot="title">
-      <span class="hidden xl:inline">Confidently</span> Enroll
+      <span class="hidden xl:inline">A Simple Plan to Help You </span> Find
       <span class="text-accent dark:text-white highlight"> New Clients</span>
-      <span class="hidden xl:inline"> Every Week Without Exausting Yourself</span>
+      <span class="hidden xl:inline"> Every Week Without Feeling Tired or Stuck</span>
     </Fragment>
 
+    <!-- This is not just a chat. It's a step-by-step look at how to grow your business with The RED Method. In just 45 minutes, we’ll show you what to fix, what to change, and how to get more of the right people saying “yes” to your offer. -->
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">The RED Method</span> is a simple 3-step system for businesses to consistently enroll
-        great clients</span
+        In just 45 minutes, we’ll show you what to fix, what to change, and how to get more of the right people saying “yes” to your offer.</span 
       >
       <span class="block mb-1 sm:hidden font-bold text-blue-600">every week like clockwork</span>
       without burning out.
