chore: revise hero mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,8 +44,7 @@ const metadata = {
       <span class="hidden sm:inline">
         In just 45 minutes, we’ll show you what to fix, what to change, and how to get more of the right people saying “yes” to your offer.</span 
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">every week like clockwork</span>
-      without burning out.
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">With Less Work and No Guessing</span>
     </Fragment>
   </Hero>
 
